[package]
name = "haversine_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rand = "0.8.5"
counter = { version = "0.1", path = "./counter" }
ryu = "1.0.18"
windows = { version = "0.58.0", features = ["Win32", "Win32_System", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Memory"] }

[[bench]]
name = "rolling"
harness = false

[[bench]]
name = "v_alloc"
harness = false

[[bench]]
name = "single_pass"
harness = false
